Resolved disconnect between user and mod pages
User pages had two extra grid columns that were skewing the layout so that it didn't line up with all of the other pages.

--- a/assets/sass/user.sass
+++ b/assets/sass/user.sass
@@ -142,7 +142,7 @@ header
 
 body
   display: grid
-  grid-template-columns: auto minmax(min-content, 1020px) auto
+  grid-template-columns: auto minmax(0px, 1020px) auto
   grid-template-rows: auto min-content auto
   header
     grid-column: 2 / 3
@@ -154,7 +154,7 @@ body
     grid-column: 2 / 3
     grid-row: 3 / 4
   footer
-    grid-column: 2 / 5
+    grid-column: 2 / 3
     grid-row: 4 / 5
 
 frontmatter
